name: html2hamlet
version: 0.2.0
cabal-version: >=1.6
build-type: Simple
license: BSD3
license-file: LICENSE
maintainer: tanaka.hideyuki@gmail.com
homepage: http://github.com/tanakh/html2hamlet
synopsis: HTML to Hamlet converter
description:
    HTML to Hamlet converter
category: Text
author: Hideyuki Tanaka

source-repository head
    type: git
    location: https://tanakh@github.com/tanakh/html2hamlet.git

executable html2hamlet
    main-is: Html2Hamlet.hs
    build-depends: base >=4 && <5
                 , bytestring >=0.9
                 , text >=0.11
                 , blaze-builder >=0.2
                 , hamlet >=1.1
                 , http-conduit >=1.9
                 , network >=2.3
                 , deepseq
                 , optparse-declarative >= 0.3
                 , mtl
                 , html-conduit
                 , xml-conduit
                 , containers
